--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
         
                 <div class="head">
                     <div class="myimg">
-                        <img src="my.jpg" alt="">
+                        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFLhXZMotSC3A/profile-displayphoto-shrink_400_400/0/1656750765178?e=1673481600&v=beta&t=WAtonXT2u5v6JFrBnXKTTow4UxaiEepQT5g7hkxQ97Y" alt="">
                     </div>
                     <div class="myname">
                         <h1>Tara Chand Kumawat</h1>
